For Desktop tab sharing, activate selected inactive tab

BUG=594722

Review URL: https://codereview.chromium.org/1805583002

Cr-Commit-Position: refs/heads/master@{#381473}

Former-commit-id: 4bfd41b23017c287cf269f34ca563ad4072a6bf4